--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
 <body>
     <section>
         <div class="half-width">
-            <h1>Stay Focused on</h1>
-            <h1><span class="color">Mission 2022</span> World!</h1>
-
+            <div class="Stay-Focused">
+                <h1>Stay Focused on</h1>
+                <h2><span class="color">Mission 2022 World!</span></h2>
+            </div>
             <p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that
                 work.
                 That's why I am learning and mastering web development. I will not stop until I become the Web
@@ -29,7 +30,7 @@
 
             <a class="link-button" target="_blank" href="https://www.youtube.com/">HIRE ME</a>
 
-            <h1>That's why I am learning and mastering</h1>
+            <h4>That's why I am learning and mastering</h4>
         </div>
         < <div class="half-width">
             <img src="img/person-0.png" alt="">
