--- a/index.html
+++ b/index.html
@@ -13,29 +13,99 @@
 </head>
 
 <body>
-    <section>
+    <section class="top flexible-container">
         <div class="half-width">
             <div class="Stay-Focused">
                 <h1>Stay Focused on</h1>
                 <h2><span class="color">Mission 2022 World!</span></h2>
             </div>
-            <p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that
-                work.
-                That's why I am learning and mastering web development. I will not stop until I become the Web
-                Development
-                Hero.
+            <p>I am Rasedul Karim. I am a web developer. I want to finish the whole web developer course in 2022.
             </p>
-
-
 
             <a class="link-button" target="_blank" href="https://www.youtube.com/">HIRE ME</a>
 
-            <h4>That's why I am learning and mastering</h4>
+            <h5 class="why-am">That's why I am learning and mastering</h5>
         </div>
         < <div class="half-width">
-            <img src="img/person-0.png" alt="">
+            <img src="img/2b8999a33942149b37bf0dee387ea695.jpg" alt="">
             </div>
     </section>
 
+    <section class="Rashed">
+        <h3 class="My">My Mission in <span>2022</span></h3>
+        <div class="flexible-container">
+            <div id="Mission-item" class="Rashed-item">
+
+                <h4 class="Rashed-color">mission</h4>
+                <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function,
+                    efficient. I didn't stop with the web. I went beyond with most popular Javascript framework
+                    called
+                    Vue
+                    JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+            </div>
+            <div id="item-vission" class="Rashed-vission-item">
+
+                <h4 class="Rashed-vission-color">vission </h4>
+                <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and
+                    showed
+                    it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
+            </div>
+            <div id="item-Goals" class="Rashed-Goals-item">
+
+                <h4 class="Rashed-Goals-color">Goals</h4>
+                <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and
+                    showed
+                    it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
+            </div>
+        </div>
+    </section>
+
+    <section class="flexible-container">
+        <div class="second-width">
+            <img src="img/project.png" alt="">
+        </div>
+        <div class="second-width">
+            <h1 class="Develop">Develop Without Limits<h1>
+                    <p class="dolor">its mission to approach strategies of professional development for each
+                        organization as something new.</p>
+                    <a class="button" target="_blank" href="https://www.youtube.com/">HIRE ME</a>
+
+        </div>
+        </div>
+    </section>
+
+    <section class="top flexible-container">
+
+        <div class="third-width">
+            <div class="htird">
+                <h1>Know our Global Community</h1>
+
+            </div>
+            <p>Globalization is flattening the world and has created changes to our social and political environments
+            </p>
+
+            <a class="link-button-third" target="_blank" href="https://www.youtube.com/">HIRE ME</a>
+
+
+        </div>
+        <div class=" third-width">
+            <img src="img/bq76o8b122k11.jpg" alt="">
+        </div>
+    </section>
+
+
+
+
+
+
+    <footer>
+        <div class="footer-and">
+            <h3>Mission <span>2022</span></h3>
+            <p>Hard work, Perseverance, and Determination for 202</p>
+        </div>
+
+    </footer>
 
 </body>
+
+</html>
