--- a/index.html
+++ b/index.html
@@ -93,10 +93,19 @@
         </div>
     </section>
 
+    <section class="box flexible-container">
+        <div class="contact-box">
 
-
-
-
+            <form>
+                <input type="text" class="input-field" placeholder="Your Name">
+                <input type="email" class="input-field" placeholder="Your Email">
+                <input type="text" class="input-field" placeholder="Subject">
+                <textarea type="text" class="input fieldtextarea-field" placeholder="Your message">
+</textarea>
+                <button type="button" class="btn-btn">Sean Message</button>
+            </form>
+        </div>
+    </section>
 
     <footer>
         <div class="footer-and">
